--- a/final/final.css
+++ b/final/final.css
@@ -80,7 +80,7 @@ table {
 	.logo2 { display: none; }
 	}
 	
-@media screen and (max-width:485px) {
+@media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) {
 	.slogan h4 { display: none; }
 	.slogan h5 { display: inline-block; max-width: 100%; height: auto; }
 	.logo h2 img { display: inline-block; }
