--- a/final/about.css
+++ b/final/about.css
@@ -104,7 +104,7 @@ table {
 	.contact p { display: none; }
 	.logo { position: absolute; top: -9999px; }
 	#header { height: 130px; }
-	.title { position: relative; top: -10px; }
+	.title { position: relative; top: -10px; left: -3px; }
 	}
 		
 @font-face {
