--- a/final/pages.css
+++ b/final/pages.css
@@ -110,7 +110,7 @@ table {
 	.contact p { display: none; }
 	#header { height: 0px; margin-bottom: -20px; }
 	.logo { position: absolute; top: -9999px; }
-	.title { position: relative; top: -10px; }
+	.title { position: relative; top: -10px; left: -3px; }
 	}
 		
 @font-face {
