--- a/final/work.css
+++ b/final/work.css
@@ -91,7 +91,7 @@ table {
 	.contact p { display: none; }
 	.logo { position: absolute; top: -9999px; }
 	#header { height: 150px; }
-	.title { position: relative; top: -10px; }
+	.title { position: relative; top: -10px; left: -3px; }
 	}
 		
 @font-face {
