--- a/final/pages.css
+++ b/final/pages.css
@@ -111,6 +111,7 @@ table {
 	#header { height: 0px; margin-bottom: -20px; }
 	.logo { position: absolute; top: -9999px; }
 	.title { position: relative; top: -10px; left: -4px; }
+	#para2 h1 { margin-top: 30px; }
 	}
 		
 @font-face {
@@ -409,6 +410,46 @@ section {
 }
 
 #paragraphs2 h4 {
+	font-family: arch;
+	font-size: 1em;
+	color: #00C07A;
+	padding-bottom: 1em;
+}
+
+#para2 {
+	float: left;
+	width: 85%;
+	padding-left: 8%;
+	padding-right: 7%;
+	padding-top: 15px;
+	padding-bottom: 35px;
+    background-color: #ffffff;
+}
+
+#para2 h1 {
+	font-family: bold;
+	font-size: 2.25em;
+	text-transform: uppercase;
+	color: #4B4B4B;
+}
+
+#para2 h2 {
+	font-family: arch;
+	font-size: 1.75em;
+	color: #00C07A;
+	padding-bottom: 1em;
+}
+
+#para2 h3 {
+	font-family: bold;
+	font-size: 1em;
+	text-transform: uppercase;
+	color: #4B4B4B;
+	padding-top: 1em;
+	padding-bottom: .35em;
+}
+
+#para2 h4 {
 	font-family: arch;
 	font-size: 1em;
 	color: #00C07A;
